--- a/.github/workflows/snakemake.yaml
+++ b/.github/workflows/snakemake.yaml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-24.04
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
